@@ -2,6 +2,7 @@
 v5.0-git
 --------
 
+[mms] Load folders on-demand in sidebar (DIMP).
 [mms] Add priority setting to DIMP.
 [mms] Simplify and improve priority header generation/display.
 [mms] Add Face: header support to IMP.
